--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   </head>
   <body class="m-0 p-0 flex justify-center items-center overflow-hidden bg-cover bg-center bg-no-repeat" style="height: 105vh">
     <div id="root" class="w-screen h-screen overflow-hidden"></div>
+
+    
+    <script src="https://www.gstatic.com/firebasejs/11.9.0/firebase-app-compat.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/11.9.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.9.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.9.0/firebase-storage-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.9.0/firebase-database-compat.js"></script>
+
+    <script src="./firebase-config.js"></script>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
