--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fluffy Paws</title>
   </head>
-  <body class="m-0 p-0 flex justify-center items-center overflow-hidden bg-cover bg-center bg-no-repeat" style="height: 105vh">
-    <div id="root" class="w-screen h-screen overflow-hidden"></div>
+  <body>
+    <div id="root"></div>
 
     
     <script src="https://www.gstatic.com/firebasejs/11.9.0/firebase-app-compat.js"></script>
